// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`App > when user is one > should render user 1`] = `
<div>
  <div
    data-testid="user-testid-1"
  >
    <button
      type="button"
    >
      Edit
    </button>
    <button
      type="button"
    >
      Delete
    </button>
    <p>
      Id: 
      <span>
        1
      </span>
    </p>
    <p>
      <b>
         Name: 
      </b>
      <span>
        Daniel Olatunde
      </span>
    </p>
    <p>
      <b>
        Username: 
      </b>
      <span>
        Dannypy
      </span>
    </p>
  </div>
  <div>
    <div>
      <h1>
        React Context API
      </h1>
    </div>
    <hr />
    <div>
      <label
        for="input"
      >
        Change LayerName:
      </label>
      <input
        id="input"
        type="text"
        value=""
      />
      <button>
        Change
      </button>
    </div>
    <div>
      <ul>
        <h2>
          FIrst Layer
        </h2>
        <li>
          Id: 
        </li>
        <li>
          Name: 
        </li>
        <li>
          Username: 
        </li>
        <li>
          Email: 
           
        </li>
      </ul>
      <ul>
        <h2>
          Second Layer
        </h2>
        <li />
      </ul>
      <ul>
        <h2>
          Third Layer
        </h2>
        <li />
      </ul>
    </div>
  </div>
</div>
`;

exports[`render Context data > render correct email 1`] = `
<div>
  <div>
    <div>
      <h1>
        React Context API
      </h1>
    </div>
    <hr />
    <div>
      <label
        for="input"
      >
        Change LayerName:
      </label>
      <input
        id="input"
        type="text"
        value=""
      />
      <button>
        Change
      </button>
    </div>
    <div>
      <ul>
        <h2>
          FIrst Layer
        </h2>
        <li>
          Id: 
        </li>
        <li>
          Name: 
        </li>
        <li>
          Username: 
        </li>
        <li>
          Email: 
           
        </li>
      </ul>
      <ul>
        <h2>
          Second Layer
        </h2>
        <li />
      </ul>
      <ul>
        <h2>
          Third Layer
        </h2>
        <li />
      </ul>
    </div>
  </div>
</div>
`;
